[project]
name = "a2a-samples-ag2"
version = "0.1.0"
description = "Generate or modify images using A2A and AG2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]>=0.95.0",
    "google-genai>=1.9.0",
    "a2a-samples",
]

[tool.uv.sources]
a2a-samples = { workspace = true }